# Verko

./: .gitignore  CLAUDE.md  README.md  README.zh.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.renderer.config.ts  vitest.config.ts  vitest.renderer.config.ts
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  pages.yml  release-guard.yml  release.yml
docs/superpowers/specs/: 2026-04-29-spec-a-storage-backend-and-library-chooser-design.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: .gitignore  icon.icns
src-tauri/src/: agent_cmd.rs  deep_link_cmd.rs  dialog_cmd.rs  fs_cmd.rs  http_cmd.rs  keychain.rs  lib.rs  libraries_cmd.rs  main.rs  menu.rs  oauth_cmd.rs  paths_cmd.rs  registry.rs  scope.rs  state.rs  zip_cmd.rs
src/electron/: atomicWrite.ts  index.ts  menu.ts  scope.ts
src/electron/__tests__/: backendLocal.test.ts  schema.test.ts  scope.test.ts  zip.test.ts
src/electron/agent/: config.ts  keyStore.ts
src/electron/ipc/: agent.ts  dialog.ts  fs.ts  index.ts  libraries.ts  paths.ts
src/electron/libraries/: registry.ts
src/electron/paperdb/: backendLocal.ts  libraryManager.ts  zip.ts
src/main/: index.ts
src/main/__tests__/: backendLocal.test.ts  frontmatter.test.ts  id.test.ts  library.integration.test.ts  registry.test.ts  schema.test.ts  search.test.ts  zip.test.ts
src/main/agent/: auth.ts  client.ts  config.ts  conversations.ts  index.ts  loop.ts  newTools.ts  prompt.ts  session.ts  tools.ts
src/main/agent/providers/: anthropic.ts  gemini.ts  index.ts  openai.ts  types.ts
src/main/agent/tools/: documentTools.ts  documents.ts  index.ts  managerTools.ts  pdfTools.ts
src/main/ipc/: agent.ts  collections.ts  conversations.ts  index.ts  libraries.ts  papers.ts  pdf.ts  schema.ts
src/main/libraries/: credentials.ts  registry.ts
src/main/paperdb/: backend.ts  backendLocal.ts  backendS3.ts  csv.ts  frontmatter.ts  id.ts  import.ts  importPdf.ts  index.ts  manager.ts  schema.ts  store.ts  zip.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  entry.tsx  main.tsx
src/renderer/src/__tests__/: setup.ts
src/renderer/src/desktop/: backendIpc.ts  desktopApi.ts  desktopTools.ts  libraryHost.ts  preloadApi.ts  shellApi.ts
src/renderer/src/lib/: agentFacade.ts  ipc.ts  libraryFacade.ts  providerBuild.ts  useMobile.ts  utils.ts
src/renderer/src/locales/: en.json  zh.json
src/renderer/src/store/: agent.ts  dialogs.ts  library.ts  ui.ts
src/renderer/src/styles/: global.css  globals.css
src/renderer/src/tauri/: tauriPreload.ts  tauriShell.ts  tauriStubApi.ts
src/renderer/src/web/: apiKeys.ts  credentials.ts  pdfTools.ts  webAgent.ts  webApi.ts  webTools.ts
src/shared/: presets.ts  providers.ts  types.ts
src/shared/agent/: agent.ts  compact.ts  conversationStore.ts  loop.ts  prompt.ts  wireLog.ts  workerPrompts.ts
src/shared/agent/providers/: anthropic.ts  gemini.ts  openai.ts  types.ts
src/shared/agent/tools/: collectionTools.ts  compactTool.ts  documentTools.ts  fileTools.ts  highlightTools.ts  index.ts  ingestTools.ts  paperTools.ts  pdfTools.ts  (+3 more)
src/shared/net/: fetch.ts
src/shared/oauth/: codex.ts
src/shared/paperdb/: arxiv.ts  backend.ts  backendLocalStorage.ts  csv.ts  htmlExtract.ts  id.ts  import.ts  schema.ts  search.ts  store.ts
src/shared/util/: randomId.ts
(+64 files in other folders)
