[package]
name = "verko"
version = "0.5.0-4"
description = "Agent-first paper management. CSV + Markdown native storage."
authors = ["CatVinci-Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "verko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
