[package]
name = "verko"
version = "0.5.0-dev.5"
description = "Agent-first paper management. CSV + Markdown native storage."
authors = ["CatVinci-Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "verko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
# native-tls on Windows = Schannel (system TLS). Avoids shipping a second TLS
# stack (rustls) and drops the brotli-decompressor crate, both of which have
# tripped Defender ML heuristics on Rust binaries in the wild.
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }

# Desktop-only: OS keychain. The `keyring` crate has no mobile backend.
# On iOS/Android we fall back to a file-based store under the app's
# sandboxed data dir — see src/keychain/mobile.rs.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Mobile-only: OAuth callback over custom URL scheme. Replaces the
# `oauth_loopback_wait` TCP listener — neither iOS nor Android allows
# binding loopback ports from an app sandbox.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-deep-link = "2"

[dev-dependencies]
tempfile = "3"

# Smaller, stripped, single-codegen-unit binary — fewer string/code matches
# for AV heuristics to grab onto, and a meaningful size reduction.
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
